--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="An onboarding website Var 1">
     <link rel="stylesheet" href="style.css">
     <title>Variant 1</title>
+    <script type="text/javascript">
+        // Duration in milliseconds to wait while the Kameleoon application file is loaded
+        var kameleoonLoadingTimeout = 1000;
+
+        window.kameleoonQueue = window.kameleoonQueue || [];
+        window.kameleoonStartLoadTime = new Date().getTime();
+        if (!document.getElementById("kameleoonLoadingStyleSheet") && !window.kameleoonDisplayPageTimeOut) {
+            var kameleoonS = document.getElementsByTagName("script")[0];
+            var kameleoonCc = "* { visibility: hidden !important; background-image: none !important; }";
+            var kameleoonStn = document.createElement("style");
+            kameleoonStn.type = "text/css";
+            kameleoonStn.id = "kameleoonLoadingStyleSheet";
+            if (kameleoonStn.styleSheet) {
+                kameleoonStn.styleSheet.cssText = kameleoonCc;
+            }
+            else {
+                kameleoonStn.appendChild(document.createTextNode(kameleoonCc));
+            }
+            kameleoonS.parentNode.insertBefore(kameleoonStn, kameleoonS);
+            window.kameleoonDisplayPage = function (fromEngine) {
+                if (!fromEngine) {
+                    window.kameleoonTimeout = true;
+                }
+                if (kameleoonStn.parentNode) {
+                    kameleoonStn.parentNode.removeChild(kameleoonStn);
+                }
+            };
+            window.kameleoonDisplayPageTimeOut = window.setTimeout(window.kameleoonDisplayPage, kameleoonLoadingTimeout);
+        }
+    </script>
+    <script type="text/javascript" src="//kv5xa0u8g7.kameleoon.io/engine.js" async="true" fetchpriority="high"></script>
 </head>
+
 <body>
     <h1>Onboarding 1</h1>
     <p>Lorem Ipsum blah blah</p>
     <img src="./img/kitten.jpg" alt="kitten.jpg">
     <button>Btn for smth</button>
 </body>
+
 </html>
