--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 </head>
 
 <body>
-    <h1>Onboarding 1</h1>
-    <p>Lorem Ipsum blah blah</p>
-    <img src="./img/kitten.jpg" alt="kitten.jpg">
-    <button>Btn for smth</button>
+    <h1 id="title">Onboarding 1</h1>
+    <p id="description">Lorem Ipsum blah blah</p>
+    <img id="image" src="./img/kitten.jpg" alt="kitten.jpg">
+    <button id="btn">Btn for smth</button>
 </body>
 
 </html>
